// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/SearchField Search Field disabled 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 6.25rem;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  opacity: 0.5;
  cursor: not-allowed;
  min-width: 17.875rem;
  background-color: white;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.0625rem transparent;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 12px 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: inherit;
  margin-right: 0.5rem;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #5f6c85;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-7 path {
  fill: #5f6c85;
}

.emotion-8 {
  width: 100%;
}

.emotion-9 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  width: 100%;
  z-index: 1;
  font-size: 1rem;
  text-overflow: ellipsis;
}

.emotion-9::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-9::-moz-placeholder {
  color: #5f6c85;
}

.emotion-9:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-9::placeholder,
.emotion-9::-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-9+label {
  font-size: 1rem;
}

.emotion-9:focus {
  color: #0f0f17;
  outline: none;
}

.emotion-9:disabled {
  cursor: not-allowed;
}

.emotion-17 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  width: 100%;
  z-index: 1;
  font-size: 0.875rem;
  text-overflow: ellipsis;
}

.emotion-17::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-17::-moz-placeholder {
  color: #5f6c85;
}

.emotion-17:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-17::placeholder,
.emotion-17::-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-17+label {
  font-size: 0.875rem;
}

.emotion-17:focus {
  color: #0f0f17;
  outline: none;
}

.emotion-17:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </div>
            <div
              className="emotion-8"
            >
              <input
                className="emotion-9"
                disabled={true}
                onChange={[Function]}
                placeholder="Search"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </div>
            <div
              className="emotion-8"
            >
              <input
                className="emotion-17"
                disabled={true}
                onChange={[Function]}
                placeholder="Search"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/SearchField Search Field sizes 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 6.25rem;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  opacity: 1;
  cursor: auto;
  min-width: 17.875rem;
  background-color: white;
}

.emotion-3:hover {
  background-color: #f3f5f8;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 12px 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: inherit;
  margin-right: 0.5rem;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #5f6c85;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-7 path {
  fill: #5f6c85;
}

.emotion-8 {
  width: 100%;
}

.emotion-9 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  width: 100%;
  z-index: 1;
  font-size: 1rem;
  text-overflow: ellipsis;
}

.emotion-9::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-9::-moz-placeholder {
  color: #5f6c85;
}

.emotion-9:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-9::placeholder,
.emotion-9::-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-9+label {
  font-size: 1rem;
}

.emotion-9:focus {
  color: #0f0f17;
  outline: none;
}

.emotion-9:disabled {
  cursor: not-allowed;
}

.emotion-17 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  width: 100%;
  z-index: 1;
  font-size: 0.875rem;
  text-overflow: ellipsis;
}

.emotion-17::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-17::-moz-placeholder {
  color: #5f6c85;
}

.emotion-17:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-17::placeholder,
.emotion-17::-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-17+label {
  font-size: 0.875rem;
}

.emotion-17:focus {
  color: #0f0f17;
  outline: none;
}

.emotion-17:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </div>
            <div
              className="emotion-8"
            >
              <input
                className="emotion-9"
                onChange={[Function]}
                placeholder="Search"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </div>
            <div
              className="emotion-8"
            >
              <input
                className="emotion-17"
                onChange={[Function]}
                placeholder="Search"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/SearchField Search Field with placeholder 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-3 {
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #cfd7e5;
  border-radius: 6.25rem;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: relative;
  opacity: 1;
  cursor: auto;
  min-width: 17.875rem;
  background-color: white;
}

.emotion-3:hover {
  background-color: #f3f5f8;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #1451dc;
  background-color: #e7ebf2;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 12px 1rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  line-height: 0.8;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: unset;
  margin-left: inherit;
  margin-right: 0.5rem;
}

.emotion-6 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  fill: #5f6c85;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-7 path {
  fill: #5f6c85;
}

.emotion-8 {
  width: 100%;
}

.emotion-9 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  width: 100%;
  z-index: 1;
  font-size: 1rem;
  text-overflow: ellipsis;
}

.emotion-9::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-9::-moz-placeholder {
  color: #5f6c85;
}

.emotion-9:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-9::placeholder,
.emotion-9::-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-9+label {
  font-size: 1rem;
}

.emotion-9:focus {
  color: #0f0f17;
  outline: none;
}

.emotion-9:disabled {
  cursor: not-allowed;
}

.emotion-17 {
  background: transparent;
  border: none;
  color: #0f0f17;
  display: block;
  position: relative;
  width: 100%;
  z-index: 1;
  font-size: 0.875rem;
  text-overflow: ellipsis;
}

.emotion-17::-webkit-input-placeholder {
  color: #5f6c85;
}

.emotion-17::-moz-placeholder {
  color: #5f6c85;
}

.emotion-17:-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-17::placeholder,
.emotion-17::-ms-input-placeholder {
  color: #5f6c85;
}

.emotion-17+label {
  font-size: 0.875rem;
}

.emotion-17:focus {
  color: #0f0f17;
  outline: none;
}

.emotion-17:disabled {
  cursor: not-allowed;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </div>
            <div
              className="emotion-8"
            >
              <input
                className="emotion-9"
                onChange={[Function]}
                placeholder="Placeholder"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-3"
        >
          <div
            className="emotion-4"
          >
            <div
              className="emotion-5"
            >
              <span
                className="emotion-6"
                onClick={[Function]}
              >
                <span
                  className="emotion-7"
                />
              </span>
            </div>
            <div
              className="emotion-8"
            >
              <input
                className="emotion-17"
                onChange={[Function]}
                placeholder="Placeholder"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
